# Arceon

./: .gitignore  Cargo.toml  GAMEPLAY_GUIDE.md  README.md  config.toml  notes.txt  test_areas.py  test_client_server.rs  test_gameplay.rs  test_skill_migration.py
.cargo/: config.toml
arceon-advanced-ai/: Cargo.toml
arceon-advanced-ai/src/: behavior_trees.rs  dialogue_ai.rs  emotion_simulation.rs  intelligent_balancing.rs  lib.rs  machine_learning.rs  neural_networks.rs  npc_ai.rs  pathfinding_ai.rs  player_modeling.rs  predictive_analytics.rs  procedural_generation.rs  reinforcement_learning.rs
arceon-advanced-networking/: Cargo.toml
arceon-advanced-networking/src/: cdn_integration.rs  failover_system.rs  global_state.rs  latency_manager.rs  lib.rs  load_balancer.rs  message_routing.rs  network_optimizer.rs  peer_to_peer.rs  server_mesh.rs  service_discovery.rs
arceon-ai/: Cargo.toml
arceon-ai/src/: adaptive_behavior.rs  ai_manager.rs  consensus_integration.rs  emergent_storytelling.rs  lib.rs  ml_text.rs  neural_network.rs  npc.rs
arceon-blockchain/: Cargo.toml
arceon-blockchain/src/: lib.rs  nft_system.rs  token_economy.rs
arceon-consensus/src/: lib.rs
arceon-core/: Cargo.toml
arceon-core/src/: config.rs  error.rs  events.rs  lib.rs  persistence.rs  state.rs
arceon-core/src/ai/: learning.rs
arceon-core/src/entities/: archetypes.rs  being.rs  character_creation.rs  governance.rs  item.rs  knowledge.rs  mod.rs  npc.rs  player.rs  quests.rs  skill.rs  skills.rs  world.rs
arceon-core/src/systems/: afk_system.rs  death_system.rs  mod.rs  skill_evolution.rs  vital_manager.rs
arceon-crafting/: Cargo.toml
arceon-crafting/src/: automation_system.rs  building_system.rs  crafting_engine.rs  lib.rs  quality_system.rs  recipe_system.rs  resource_discovery.rs  workshop_manager.rs
arceon-crypto/: Cargo.toml
arceon-crypto/src/: lib.rs
arceon-deployment/: Cargo.toml
arceon-deployment/src/: backup.rs  configuration.rs  deployment.rs  health.rs  infrastructure.rs  lib.rs  monitoring.rs  scaling.rs  security.rs
arceon-dimensions/: Cargo.toml
arceon-dimensions/src/: dimensional_system.rs  lib.rs  portal_system.rs  realm_exploration.rs
arceon-economy/: Cargo.toml
arceon-economy/src/: ai_traders.rs  economic_simulator.rs  lib.rs  marketplace.rs  price_engine.rs  resource_economy.rs  supply_demand.rs  trade_routes.rs
arceon-governance/: Cargo.toml
arceon-governance/src/: citizen_participation.rs  consensus_algorithms.rs  constitutional_framework.rs  democratic_system.rs  governance_engine.rs  lib.rs  policy_enforcement.rs  proposal_management.rs  voting_mechanisms.rs
arceon-graphics/: Cargo.toml
arceon-graphics/src/: animation.rs  camera.rs  effects.rs  lib.rs  lighting.rs  material.rs  mesh.rs  particles.rs  postprocessing.rs  renderer.rs  scene.rs  shadows.rs  sky.rs  terrain.rs  texture.rs  ui.rs  water.rs
arceon-graphics/src/shaders/: geometry.wgsl
arceon-gui/: Cargo.toml
arceon-gui/src/: client.rs  input.rs  lib.rs  themes.rs  widgets.rs
arceon-gui/src/windows/: character.rs  console.rs  inventory.rs  map.rs  mod.rs  settings.rs  skills.rs
arceon-mobile/: Cargo.toml
arceon-mobile/src/: adaptive_ui.rs  cloud_sync.rs  lib.rs  mobile_ui.rs  offline_mode.rs  performance.rs  platform.rs  touch_input.rs  web_integration.rs
arceon-network/: Cargo.toml
arceon-network/src/: lib.rs
arceon-performance/: Cargo.toml
arceon-performance/src/: caching_system.rs  concurrent_processor.rs  indexing_engine.rs  lib.rs  performance_monitor.rs  resource_optimizer.rs  scalability_manager.rs
arceon-platform-integration/: Cargo.toml
arceon-platform-integration/src/: achievements.rs  analytics.rs  authentication.rs  content_management.rs  epic_games.rs  errors.rs  generic_adapter.rs  lib.rs  platform_manager.rs  steam.rs  user_profile.rs  windows_launcher.rs
arceon-progression/: Cargo.toml
arceon-progression/src/: achievements.rs  archetype_system.rs  character_builds.rs  customization_system.rs  experience_system.rs  lib.rs  progression_analytics.rs  skill_trees.rs  talent_system.rs
arceon-pvp/: Cargo.toml
arceon-pvp/src/: anti_cheat.rs  arena_system.rs  combat_balance.rs  lib.rs  matchmaking.rs  reward_system.rs  tournament_system.rs
arceon-quests/: Cargo.toml
arceon-quests/src/: dialogue_system.rs  lib.rs  narrative_engine.rs  quest_chains.rs  quest_generation.rs  story_progression.rs  world_events.rs
arceon-social/: Cargo.toml
arceon-social/src/: communication.rs  community_events.rs  friendship_network.rs  guild_system.rs  lib.rs
arceon-testing/: Cargo.toml
arceon-testing/src/: chaos_testing.rs  e2e_tests.rs  integration_tests.rs  lib.rs  load_tests.rs  mock_services.rs  performance_tests.rs  stress_tests.rs  test_fixtures.rs  test_utils.rs  unit_tests.rs
arceon-world/: Cargo.toml
arceon-world-systems/: Cargo.toml
arceon-world-systems/src/: lib.rs  natural_events.rs  seasonal_system.rs  weather_system.rs
arceon-world/src/: area_generator.rs  area_manager.rs  command_engine.rs  enhanced_commands.rs  genesis.rs  lib.rs  name_generator.rs  race_database.rs  runestone_knowledge.rs  targeting.rs  trading_system.rs
arceon-world/src/race_database/: race_creation_helpers.rs  remaining_races.rs
docs/: BEING_SYSTEM_UPDATE.md  DECENTRALIZED_ARCHITECTURE.md  OVERALL_FEATURES.md
examples/: afk_death_system_demo.rs  archetype_demo.rs  blockchain_integration_demo.rs  graphics_engine_demo.rs  performance_demo.rs  platform_integration_demo.rs  testing_demo.rs
gametrainingdata/: advanced_crafting.txt  core_lore.txt  geomancer_arts.txt
src/: ai_demo.rs  authentication.rs  being_demo.rs  contribution.rs  crafting_system.rs  currency_market.rs  database.rs  genesis_demo.rs  group_system.rs  guild_system.rs  land_ownership.rs  main.rs  main_terminal.rs  master_node.rs  mini_server.rs  non_combat_roles.rs  reward_engine.rs  server.rs  skill_migration.rs  standalone_being_demo.rs  test_gameplay.rs  voting_system.rs  work_based_deployment.rs  work_classification.rs
