[package]
name = "arceon-governance"
version = "0.1.0"
edition = "2021"
description = "Decentralized governance and democracy systems for Arceon"

[dependencies]
arceon-core = { path = "../arceon-core" }
arceon-ai = { path = "../arceon-ai" }
arceon-economy = { path = "../arceon-economy" }
arceon-blockchain = { path = "../arceon-blockchain" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Cryptographic libraries for secure voting
ed25519-dalek = "2.0"
sha2 = "0.10"
blake3 = "1.5"

# Mathematical operations for voting algorithms
ndarray = { version = "0.15", optional = true }

# Graph algorithms for governance relationships
petgraph = "0.6"

[features]
default = []
advanced-crypto = ["ndarray"]