[package]
name = "arceon-performance"
version = "0.1.0"
edition = "2021"
description = "Performance optimization and monitoring systems for Arceon MMORPG"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Performance monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Caching
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.23", features = ["tokio-comp", "serde_json"] }

# Async utilities
futures = "0.3"
arc-swap = "1.6"

# Memory management
dashmap = "5.5"

# Profiling - disabled on Windows due to compatibility issues
# pprof = { version = "0.12", features = ["flamegraph", "protobuf-codec"] }