[package]
name = "arceon-testing"
version = "0.1.0"
edition = "2021"
description = "Comprehensive integration testing framework for Arceon MMORPG"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Arceon modules
arceon-core = { workspace = true }
arceon-economy = { workspace = true }
arceon-crafting = { workspace = true }
arceon-governance = { workspace = true }
arceon-world-systems = { workspace = true }
arceon-dimensions = { workspace = true }
arceon-progression = { workspace = true }
arceon-social = { workspace = true }
arceon-pvp = { workspace = true }
arceon-quests = { workspace = true }

# Testing frameworks
proptest = "1.4"
quickcheck = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
wiremock = "0.6"
testcontainers = "0.17"

# Async testing
tokio-test = "0.4"
futures-test = "0.3"

# Benchmarking
bencher = "0.1"

# Load testing
async-std = "1.12"
surf = "2.3"

# Database testing
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Utilities
rand = "0.8"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }