[package]
name = "arceon-world-systems"
version = "0.1.0"
edition = "2021"
description = "Dynamic world systems including weather, seasons, and natural events for Arceon"

[dependencies]
arceon-core = { path = "../arceon-core" }
arceon-ai = { path = "../arceon-ai" }
arceon-economy = { path = "../arceon-economy" }
arceon-blockchain = { path = "../arceon-blockchain" }
arceon-governance = { path = "../arceon-governance" }
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Mathematical and physics simulations
nalgebra = { version = "0.32", features = ["serde-serialize"] }
ndarray = { version = "0.15", optional = true }

# Noise generation for natural patterns
noise = "0.9"
simdnoise = "3.1"

# Environmental simulations
petgraph = "0.6"

[features]
default = []
advanced-simulation = ["ndarray"]
