[package]
name = "arceon-world"
version = "0.1.0"
edition = "2021"
description = "World generation and management for Arceon"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rand = "0.8"
tracing = "0.1"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
arceon-core = { path = "../arceon-core" }
